# CodeKids-CRM

./: README.MD  ci.py  pyproject.toml
_ci/: config.py
_ci/dev/: dev_handler.py  dev_router.py
_ci/mongo/: mongo_container_helper.py
_ci/pkg/: docker_helper.py  shell.py
_compose/dev/: docker-compose.dev.all.yaml
backend/: dev.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.template.yaml  prod.Dockerfile
backend/container/: README.md  pyproject.toml
backend/container/src/codekids_crm_backend/: main.py
backend/container/src/raknatee/: main.py
db/: Dockerfile  docker-compose.dev.yaml  docker-compose.prod.template.yaml  mongod.conf  mongodb-keyfile  setmongo.sh
docs/: README.MD  er.MD
document/: er.MD
traefik/: dev.Dockerfile  docker-compose.dev.yaml  traefik.dev.yml
