[project]
name = "CodeKids-CRM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "raknatee", email = "raknatee@raknatee.dev"},
]
dependencies = ["typer>=0.24.1"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
ci = "python ci.py"
